# cosecha

./: .cov.one  .gitignore  .pre-commit-config.yaml  conftest.py  cosecha.toml  coverage-plan.md  pyproject.toml  v2.md
.tmp-coverage/: all-packages-coverage.tsv  cosecha-core-pytest.txt  cosecha-core-report.txt  cosecha-engine-gherkin-pytest.txt  cosecha-engine-gherkin-report.txt  cosecha-engine-pytest-pytest.txt  cosecha-engine-pytest-report.txt  cosecha-instrumentation-coverage-pytest.txt  cosecha-instrumentation-coverage-report.txt  cosecha-lsp-pytest.txt  cosecha-lsp-report.txt  cosecha-mcp-pytest.txt  cosecha-mcp-report.txt  cosecha-plugin-timing-report.txt  cosecha-provider-http-pytest.txt  cosecha-provider-http-report.txt  cosecha-provider-mongodb-pytest.txt  cosecha-provider-mongodb-report.txt  cosecha-provider-ssl-pytest.txt  cosecha-provider-ssl-report.txt  cosecha-pytest.txt  cosecha-report.txt  cosecha-reporter-console-report.txt  cosecha-reporter-json-report.txt  cosecha-reporter-junit-report.txt  cosecha-workspace-pytest.txt  cosecha-workspace-python-report.txt  cosecha-workspace-report.txt  global-packages-pytest.txt  global-packages-report.txt  (+1 more)
internal/cosecha-provider-workspace/: pyproject.toml
internal/cosecha-provider-workspace/src/cosecha_internal/provider/workspace/: __init__.py  builder.py  provider.py
internal/cosecha-provider-workspace/tests/: test_provider.py
internal/cosecha-testkit/: pyproject.toml
internal/cosecha-testkit/src/cosecha_internal/testkit/: __init__.py  runtime.py
internal/cosecha-testkit/tests/: test_runtime.py
(+9 files in other folders)
